RESOLVED FIXED Bug 78571
Fix typo (HTMLContentSeleciton -> HTMLContentSelection).
https://bugs.webkit.org/show_bug.cgi?id=78571
Summary Fix typo (HTMLContentSeleciton -> HTMLContentSelection).
Hayato Ito
Reported 2012-02-13 20:32:10 PST
The title is well said.
Attachments
fix typo (14.10 KB, patch)
2012-02-13 20:34 PST, Hayato Ito
no flags
Hayato Ito
Comment 1 2012-02-13 20:34:07 PST
Created attachment 126900 [details] fix typo
WebKit Review Bot
Comment 2 2012-02-14 01:50:17 PST
The commit-queue encountered the following flaky tests while processing attachment 126900 [details]: perf/array-reverse.html bug 78593 (author: ojan@chromium.org) The commit-queue is continuing to process your patch.
WebKit Review Bot
Comment 3 2012-02-14 01:53:07 PST
Comment on attachment 126900 [details] fix typo Clearing flags on attachment: 126900 Committed r107690: <http://trac.webkit.org/changeset/107690>
WebKit Review Bot
Comment 4 2012-02-14 01:53:12 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.