Fix typo. HTMLContentSeleciton -> HTMLContentSelection. https://bugs.webkit.org/show_bug.cgi?id=78571

Reviewed by Hajime Morita.

No tests. No change in behavior.

* dom/NodeRenderingContext.cpp:
(WebCore::nextRendererOf):
(WebCore::previousRendererOf):
(WebCore::firstRendererOf):
(WebCore::lastRendererOf):
* dom/ShadowRoot.cpp:
(WebCore::ShadowRoot::insertionPointFor):
* html/shadow/HTMLContentElement.cpp:
(WebCore::HTMLContentElement::attach):
* html/shadow/HTMLContentSelector.cpp:
(WebCore::HTMLContentSelection::append):
(WebCore::HTMLContentSelection::unlink):
(WebCore::HTMLContentSelectionList::find):
(WebCore::HTMLContentSelectionList::append):
(WebCore::HTMLContentSelector::select):
(WebCore::HTMLContentSelector::unselect):
(WebCore::HTMLContentSelector::findFor):
* html/shadow/HTMLContentSelector.h:
(HTMLContentSelection):
(WebCore::HTMLContentSelection::next):
(WebCore::HTMLContentSelection::previous):
(WebCore::HTMLContentSelection::HTMLContentSelection):
(WebCore::HTMLContentSelection::create):
(WebCore::HTMLContentSelectionList::first):
(WebCore::HTMLContentSelectionList::last):
(HTMLContentSelectionList):
(WebCore::HTMLContentSelectionSet::add):
(WebCore::HTMLContentSelectionSet::remove):
(HTMLContentSelectionSet):
(WebCore::HTMLContentSelectionSet::Translator::equal):
(WebCore::HTMLContentSelectionSet::Hash::hash):
(WebCore::HTMLContentSelectionSet::Hash::equal):
(WebCore::HTMLContentSelectionSet::find):
(HTMLContentSelector):


Canonical link: https://commits.webkit.org/95537@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@107690 268f45cc-cd09-0410-ab3c-d52691b4dbfc